@@ -99,6 +99,13 @@ Other Changes
 
   Closes #4301
 
+* Improved recognition of namespace packages. They should no longer be added to ``sys.path``
+  which should prevent various issues with false positives.
+  Because of the difficulties with mirroring the python import mechanics we would gladly
+  hear feedback on this change.
+
+  Closes #5226, Closes #2648
+
 * Update ``invalid-slots-object`` message to show bad object rather than its inferred value.
 
   Closes #6101
