@@ -1,0 +1,5 @@
+"""Module that imports from its own namespace."""
+
+from pylint import run_pylint
+
+run_pylint()
